syntax = "proto3";

option go_package = "pkg/api/v1";

message Empty {
}

message GameObject {
    string name = 1;
    float pos_x = 2;
    float pos_y = 3;
    float pos_z = 4;
}

message Room {
    string id = 1;
    repeated GameObject objects = 2;
}

message RoomId {
    string id = 1;
}

message Update {
    string id = 1;
}

service SmartEnergyTableService {

    rpc CreateRoom (Empty) returns (Room) {
    }

    rpc JoinRoom (RoomId) returns (stream Update) {
    }

    rpc AddGameObject (GameObject) returns (Empty) {

    }

}