syntax = "proto3";

option go_package = "pkg/api/v1";

message Empty {
}

message Token {
    RoomUser room_user = 1;
    string object_name = 2;
    string guid = 3;
    Vector3 position = 4;
}

message Vector3 {
    float x = 1;
    float y = 2;
    float z = 3;
}

message Room {
    string id = 1;
    repeated Token objects = 2;
    int32 sceneId = 3;
}

message RoomUser {
    string id = 1;
    string user_id = 2;
}

message UserPosition {
    RoomUser room_user = 1;
    Vector3 new_position = 2;
}

message Scene {
    RoomUser room_user = 1;
    int32 sceneId = 2;
}

message Update {
    string id = 1;
    Room room = 2;
    Vector3 position = 3;
}

service SmartEnergyTableService {

    rpc CreateRoom (Empty) returns (Room) {
    }

    rpc JoinRoom (RoomUser) returns (stream Update) {
    }

    rpc SaveRoom (Room) returns (Empty) {
    }

    rpc AddToken (Token) returns (Empty) {
    }

    rpc RemoveToken (Token) returns (Empty) {
    }

    rpc MoveToken (Token) returns (Empty) {
    }

    rpc ChangeScene (Scene) returns (Empty) {
    }

    rpc MoveUsers (UserPosition) returns (Empty) {
    }

    rpc LeaveRoom (RoomUser) returns (Empty) {
    }
}